[package]
name = "coriolis-demo-3d"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.18"
egui_glium = "0.18"
glium = "0.31"
image = "0.24"
nalgebra = "0.21"
numeric-algs = "0.5"

[features]
default = [ "numeric-algs/nalgebra" ]
